# USBMonitor

./: .gitignore  CHANGELOG.md  MANIFEST.md  README.md  USBMonitor.pyw  USBMonitor_console.py  __init__.py  __main__.py  app.py  cli.py  config.py  core.py  detector.py  device_classifier.py  events.py  logging_setup.py  main.py  pyproject.toml  recent.py  requirements-build.txt  requirements.txt  run_usb_monitor.bat  startup.py  usb_device_monitor_refactor_v6_startup_fixed.py  usb_monitor.py  volume_grouping.py  windows_helpers.py
.github/workflows/: release.yml
docs/: BUILD.md  IMPLEMENTATION_1.0.md  MARKDOWN_REPORT_20260630_IMPLEMENTATION.md  RELEASE.md
gui/: __init__.py  helpers.py  theme.py  toast.py  tray.py  widgets.py
scripts/: release_meta.py
tests/: test_audit_report_fixes.py  test_bus_cache.py  test_core.py  test_entrypoint_and_nuitka.py  test_gui_bugfixes.py  test_hook_security.py  test_markdown_report_20260630_fixes.py  test_md_followup_fixes.py  test_product_iteration_130.py  test_release_automation.py  test_runtime_smoke.py  test_tray_split_and_button_size.py  test_ux_rewrites.py
upx/: README.txt
usb_monitor/: __init__.py  __main__.py  app.py  core.py  hooks.py
usb_monitor_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
